[tool.poetry]
name = "distributed-test"
version = "0.1.0"
description = ""
authors = ["Sebastian Marines <sebastian0marines@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.72.0"
uvicorn = {extras = ["standard"], version = "^0.17.0"}
aio-pika = "^6.8.1"
aioredis = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
